# logitlenskit

./: .env.local.example  .gitignore  LICENSE  PLAN.md  README.md  index.html  preview_data.js  preview_data_gptj.js
docs/: DATA_FORMAT.md  DEVELOPMENT.md  JAVASCRIPT_API.md  MODEL_SUPPORT.md  PYTHON_API.md
js/: REFACTORING-PLAN.md  jest.config.js  package-lock.json  package.json
js/src/: index.js  logit-lens-widget.js
js/tests/fixtures/: sample-data-12-layers.json  sample-data-small.json  sample-data-v2.json
js/tests/integration/: dom-interaction.test.js
js/tests/unit/: color-modes.test.js  color-picker.test.js  drag-handles.test.js  hover-behavior.test.js  pinned-groups.test.js  pinned-rows.test.js  row-resize.test.js  state-serialization.test.js  stride-calculation.test.js  widget-creation.test.js  widget-linking.test.js  x-axis-zoom.test.js
js/tests/utils/: test-helpers.js
notebooks/: demo.ipynb  test_e2e_basic.ipynb  tutorial.ipynb
python/: pyproject.toml
python/src/logitlenskit/: __init__.py  collect.py  display.py  utils.py
python/tests/: conftest.py
python/tests/integration/: test_fast.py  test_slow.py
python/tests/unit/: test_collect.py  test_models.py  test_utils.py
