[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logitlenskit"
version = "0.1.0"
description = "Efficient logit lens data collection and visualization for transformers"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "David Bau"}]
dependencies = [
    "torch>=2.0",
    "nnterp>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "fast: fast integration tests (~2 min total)",
    "slow: slow integration tests (all NDIF models)",
    "integration: all integration tests",
]

[tool.coverage.run]
source = ["src/logitlenskit"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
